// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change the icon size to the desired size 1`] = `
<img
  alt=""
  class="sc-AykKJ kvAWYT"
/>
`;

exports[`should display the icon that matches the icon name 1`] = `
<img
  alt=""
  class="sc-AykKJ dinHDj"
/>
`;
